force-app/main/default/objects/Loan_Applicant__c/fields/Sherlock_Verification__c.field-meta.xml
<CustomField>
    <fullName>Sherlock_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sherlock Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Sherlock Verification)</relationshipLabel>
    <relationshipName>Loan_Applicants4</relationshipName>
    <type>Lookup</type>
</CustomField>