force-app/main/default/objects/Loan_Applicant__c/fields/Spouse_Age__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Age__c</fullName>
    <formula>CASE(MONTH(TODAY()) - MONTH( Date_of_birth_of_Spouse__c ),
0,
IF(DAY(TODAY()) &gt;= DAY(Date_of_birth_of_Spouse__c ), YEAR(TODAY()) - YEAR(Date_of_birth_of_Spouse__c ), YEAR(TODAY()) - YEAR(Date_of_birth_of_Spouse__c ) - 1),
IF(MONTH(TODAY()) &lt; MONTH(Date_of_birth_of_Spouse__c ), YEAR(TODAY()) - YEAR(Date_of_birth_of_Spouse__c ) - 1, YEAR(TODAY()) - YEAR(Date_of_birth_of_Spouse__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spouse Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>