force-app/main/default/objects/Loan_Applicant__c/fields/Total_Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Experience__c</fullName>
    <label>Total Work Experience</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>