force-app/main/default/objects/Loan_Applicant__c/fields/TVR_Initiated__c.field-meta.xml
<CustomField>
    <fullName>TVR_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TVR Initiated</label>
    <type>Checkbox</type>
</CustomField>