force-app/main/default/objects/Loan_Applicant__c/fields/Type_Of_Profession_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Profession_Name__c</fullName>
    <label>Type Of Profession Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>