force-app/main/default/objects/Loan_Applicant__c/fields/UCID__c.field-meta.xml
<CustomField>
    <fullName>UCID__c</fullName>
    <label>UCID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>