force-app/main/default/objects/Loan_Applicant__c/fields/Udyam_Verification__c.field-meta.xml
<CustomField>
    <fullName>Udyam_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Udyam Verification</label>
    <referenceTo>Verification__c</referenceTo>
    <relationshipLabel>Loan Applicants (Udyam Verification)</relationshipLabel>
    <relationshipName>Udyam_Loan_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>