force-app/main/default/objects/Loan_Applicant__c/fields/USLBL_Staff__c.field-meta.xml
<CustomField>
    <fullName>USLBL_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <label>USLBL Staff</label>
    <type>Checkbox</type>
</CustomField>