force-app/main/default/objects/Loan_Applicant__c/fields/Verification_Detail__c.field-meta.xml
<CustomField>
    <fullName>Verification_Detail__c</fullName>
    <formula>PAN_Verification__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verification Detail</label>
    <type>Text</type>
</CustomField>