force-app/main/default/objects/Loan_Applicant__c/fields/Voter_Card__c.field-meta.xml
<CustomField>
    <fullName>Voter_Card__c</fullName>
    <label>Voter Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>