force-app/main/default/objects/Loan_Applicant__c/fields/Waive_FI__c.field-meta.xml
<CustomField>
    <fullName>Waive_FI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Waive FI</label>
    <type>Checkbox</type>
</CustomField>