force-app/main/default/objects/Loan_Applicant__c/fields/Working_in_a_bank_as_director_Sr_Office__c.field-meta.xml
<CustomField>
    <fullName>Working_in_a_bank_as_director_Sr_Office__c</fullName>
    <description>Is applicant or his relative working in a bank as director/Sr. Officer ?</description>
    <label>Working in bank as director/Sr. Officer?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>