force-app/main/default/objects/Loan_Applicant__c/recordTypes/BL_Individual.recordType-meta.xml
<RecordType>
    <fullName>BL_Individual</fullName>
    <active>true</active>
    <label>BL Individual</label>
</RecordType>