force-app/main/default/objects/Loan_Applicant__c/recordTypes/BL_Non_Individual.recordType-meta.xml
<RecordType>
    <fullName>BL_Non_Individual</fullName>
    <active>true</active>
    <label>BL Non Individual</label>
</RecordType>