force-app/main/default/objects/Loan_Applicant__c/recordTypes/Non_Individual.recordType-meta.xml
<RecordType>
    <fullName>Non_Individual</fullName>
    <active>true</active>
    <label>Non Individual</label>
</RecordType>