force-app/main/default/objects/Loan_Applicant__c/validationRules/Annuall_Turnover_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Annuall_Turnover_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), Annual_Turnover__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Annual_Turnover__c</errorDisplayField>
    <errorMessage>Annual Turnover accepts only positive numbers.</errorMessage>
</ValidationRule>