force-app/main/default/objects/Loan_Applicant__c/validationRules/Applicant_Relationship.validationRule-meta.xml
<ValidationRule>
    <fullName>Applicant_Relationship</fullName>
    <active>true</active>
    <errorConditionFormula>IF( AND(ISPICKVAL(Applicant_Type__c, &apos;Applicant&apos;),ISCHANGED(BL_Relationship_with_Applicant__c))  ,
				true, 
				false)</errorConditionFormula>
    <errorDisplayField>BL_Relationship_with_Applicant__c</errorDisplayField>
    <errorMessage>You cannot add applicant relationship in case of applicant type applicant.</errorMessage>
</ValidationRule>