force-app/main/default/objects/Loan_Applicant__c/validationRules/Date_of_Incorporation_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Incorporation_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(NOT(ISPICKVAL( Constitution__c , &apos;Individual&apos;)),
NOT(ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;))
) &amp;&amp; Date_Of_Incorporation__c &gt; TODAY()  &amp;&amp; NOT($Setup.Bypass_Validations__c.Bypass_Validation__c)
, true, false)</errorConditionFormula>
    <errorDisplayField>Date_Of_Incorporation__c</errorDisplayField>
    <errorMessage>Date of Incoporation should not be in furture</errorMessage>
</ValidationRule>