force-app/main/default/objects/Loan_Applicant__c/validationRules/DOI_Future_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>DOI_Future_Date_Validation</fullName>
    <active>true</active>
    <description>DOI is required if the constitution should not have  a Sole Proprietorship or individual</description>
    <errorConditionFormula>IF(AND(NOT(ISPICKVAL( Constitution__c , &apos;Individual&apos;)),
NOT(ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;)),
  Date_Of_Incorporation__c &gt;  TODAY() )
, true, false)</errorConditionFormula>
    <errorDisplayField>Date_Of_Incorporation__c</errorDisplayField>
    <errorMessage>Future date not allowed for date of incorporation.</errorMessage>
</ValidationRule>