force-app/main/default/objects/Loan_Applicant__c/validationRules/Employee_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX( Employee_Name__c, &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Employee_Name__c</errorDisplayField>
    <errorMessage>Employee Name allows only letters</errorMessage>
</ValidationRule>