force-app/main/default/objects/Loan_Applicant__c/validationRules/Father_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Father_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX( Father_Spouse_Name__c, &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Father_Spouse_Name__c</errorDisplayField>
    <errorMessage>Father/Spouse Name allows only letters</errorMessage>
</ValidationRule>