force-app/main/default/objects/Loan_Applicant__c/validationRules/First_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX( First_Name__c, &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>First Name allows only letters</errorMessage>
</ValidationRule>