force-app/main/default/objects/Loan_Applicant__c/validationRules/Gross_Annual_Income.validationRule-meta.xml
<ValidationRule>
    <fullName>Gross_Annual_Income</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),Gross_Annual_Income__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Gross_Annual_Income__c</errorDisplayField>
    <errorMessage>Gross Annual Income only accepts positive number.</errorMessage>
</ValidationRule>