force-app/main/default/objects/Loan_Applicant__c/validationRules/Gross_Annual_Turnover_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gross_Annual_Turnover_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),Gross_Annual_Turnover__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Gross_Annual_Turnover__c</errorDisplayField>
    <errorMessage>Gross Annual Turnover only accepts positive number.</errorMessage>
</ValidationRule>