force-app/main/default/objects/Loan_Applicant__c/validationRules/Gst_Applicable.validationRule-meta.xml
<ValidationRule>
    <fullName>Gst_Applicable</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND( NOT(ISBLANK(Text(BL_GST_Applicable__c))),
							ISPICKVAL(BL_GST_Applicable__c, &apos;Yes&apos;),
							ISBLANK(GST_Registration_Number__c)), 
			true, false)</errorConditionFormula>
    <errorDisplayField>GST_Registration_Number__c</errorDisplayField>
    <errorMessage>GST Registration Number Is required</errorMessage>
</ValidationRule>