force-app/main/default/objects/Loan_Applicant__c/validationRules/InActive_Applicant_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>InActive_Applicant_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), 
OR(Record_Type_Name__c = &apos;BL Individual&apos; , 
			Record_Type_Name__c = &apos;BL Non Individual&apos;)   ,
				NOT(isChanged(Is_Deleted__c)), ispickval(Is_Deleted__c, &apos;Yes&apos;)
				,  NOT(ISNEW())
			)</errorConditionFormula>
    <errorMessage>You don&apos;t have access to modify the inactive applicants.</errorMessage>
</ValidationRule>