force-app/main/default/objects/Loan_Applicant__c/validationRules/Income_from_agriculture_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Income_from_agriculture_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),Income_from_Agriculture__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Income_from_Agriculture__c</errorDisplayField>
    <errorMessage>Income from agriculture only accepts positive number.</errorMessage>
</ValidationRule>