force-app/main/default/objects/Loan_Applicant__c/validationRules/Income_from_other_sources_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Income_from_other_sources_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),Income_from_other_sources__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Income_from_other_sources__c</errorDisplayField>
    <errorMessage>Income from other sources only accepts positive number.</errorMessage>
</ValidationRule>