force-app/main/default/objects/Loan_Applicant__c/validationRules/Last_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX(Last_Name__c , &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last Name allows only letters</errorMessage>
</ValidationRule>