force-app/main/default/objects/Loan_Applicant__c/validationRules/Maiden_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Maiden_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX( Maiden_Name__c, &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Maiden_Name__c</errorDisplayField>
    <errorMessage>Maiden Name allows letter only.</errorMessage>
</ValidationRule>