force-app/main/default/objects/Loan_Applicant__c/validationRules/Marital_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Marital_Status</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND( Record_Type_Name__c = &apos;BL Individual&apos;, 
							NOT(ISBLANK(Text(Marital_Status__c))),
ISPICKVAL(Marital_Status__c, &apos;Married&apos;),
OR(ISBLANK(Name_of_Spouse__c),
ISBLANK(Date_of_birth_of_Spouse__c) )),
true, false)</errorConditionFormula>
    <errorMessage>In case of Married Status Name of spouse, Date of birth of spouse is mandatory.</errorMessage>
</ValidationRule>