force-app/main/default/objects/Loan_Applicant__c/validationRules/MAximum_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>MAximum_Age</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(ISPICKVAL( Constitution__c , &apos;Individual&apos;),
ISPICKVAL( Constitution__c , &apos;Sole Proprietorship&apos;)
) &amp;&amp; Age__c &gt; 70 &amp;&amp; NOT($Setup.Bypass_Validations__c.Bypass_Validation__c)
, true, false)</errorConditionFormula>
    <errorMessage>Age of the applicant is higher than the policy norms</errorMessage>
</ValidationRule>