force-app/main/default/objects/Loan_Applicant__c/validationRules/Middle_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Middle_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX( Middle_Name__c, &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Middle_Name__c</errorDisplayField>
    <errorMessage>Middle Name allows only letters</errorMessage>
</ValidationRule>