force-app/main/default/objects/Loan_Applicant__c/validationRules/MOBILE_10_DIGIT_VALIDATION.validationRule-meta.xml
<ValidationRule>
    <fullName>MOBILE_10_DIGIT_VALIDATION</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), NOT(REGEX( Mobile__c , &quot;^[6-9]{1}[0-9]{9}$&quot;)))</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile number must be of 10 digit and start with 6-9</errorMessage>
</ValidationRule>