force-app/main/default/objects/Loan_Applicant__c/validationRules/MobileNumber_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>MobileNumber_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),
    ISBLANK(Mobile__c),
    NOT(ISNEW())
  
)</errorConditionFormula>
    <errorDisplayField>Mobile__c</errorDisplayField>
    <errorMessage>Mobile Number should be 10 Digit starting with 6,7,8,9</errorMessage>
</ValidationRule>