force-app/main/default/objects/Loan_Applicant__c/validationRules/Mother_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Mother_Name_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT
AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),(REGEX( Mother_Name__c, &quot;[a-zA-Z ]*$&quot;)) )</errorConditionFormula>
    <errorDisplayField>Mother_Name__c</errorDisplayField>
    <errorMessage>Mother Name allows only letters</errorMessage>
</ValidationRule>