force-app/main/default/objects/Loan_Applicant__c/validationRules/Net_Annual_Income.validationRule-meta.xml
<ValidationRule>
    <fullName>Net_Annual_Income</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),Net_Annual_Income__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Net_Annual_Income__c</errorDisplayField>
    <errorMessage>Net Annual Income only accepts positive number</errorMessage>
</ValidationRule>