force-app/main/default/objects/Loan_Applicant__c/validationRules/Proof_of_identity_for_Expiry.validationRule-meta.xml
<ValidationRule>
    <fullName>Proof_of_identity_for_Expiry</fullName>
    <active>true</active>
    <errorConditionFormula>if(AND( NOT(ISBLANK(Text(BL_Proof_of_Identity__c))),
							OR(ISPICKVAL(BL_Proof_of_Identity__c, &apos;Passport&apos;), 
										ISPICKVAL(BL_Proof_of_Identity__c, &apos;Driving License&apos;)),
							OR(ISBLANK(Expiry_Date__c) )), 
			true, false)</errorConditionFormula>
    <errorMessage>In case of Passport or DL, Expiry date is mandatory</errorMessage>
</ValidationRule>