force-app/main/default/objects/Loan_Applicant__c/validationRules/Read_Only_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_Only_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), 
				 NOT(ISNULL(Loan_Application__c)),   
				Loan_Application__r.IsReadOnly__c  , NOT(ISNEW())  
		)</errorConditionFormula>
    <errorMessage>You dont have access to edit.</errorMessage>
</ValidationRule>