force-app/main/default/objects/Loan_Applicant__c/validationRules/Registration_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Registration_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),Registration_Number__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Registration_Number__c</errorDisplayField>
    <errorMessage>Registration Number only accepts positive number.</errorMessage>
</ValidationRule>