force-app/main/default/objects/Loan_Applicant__c/validationRules/Spouse_Minimum_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_Minimum_Age</fullName>
    <active>true</active>
    <errorConditionFormula>IF( NOT(ISBlank(Spouse_Age__c)) &amp;&amp; Spouse_Age__c &lt; 18
, true, false)</errorConditionFormula>
    <errorDisplayField>Date_of_birth_of_Spouse__c</errorDisplayField>
    <errorMessage>Age of the Spouse is below as per policy norms.</errorMessage>
</ValidationRule>