force-app/main/default/objects/Loan_Applicant__c/validationRules/Spouse_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Spouse_Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),NOT(REGEX( Name_of_Spouse__c, &quot;[a-zA-Z ]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Name_of_Spouse__c</errorDisplayField>
    <errorMessage>Spouse Name allows only letters</errorMessage>
</ValidationRule>