force-app/main/default/objects/Loan_Applicant__c/validationRules/Udyam_Registration_Application_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Udyam_Registration_Application_Date</fullName>
    <active>true</active>
    <errorConditionFormula>If(AND(NOT(isBlank(BL_Udyam_Registration_Application_Date__c)),
BL_Udyam_Registration_Application_Date__c &gt; TODAY()), true, false)</errorConditionFormula>
    <errorDisplayField>BL_Udyam_Registration_Application_Date__c</errorDisplayField>
    <errorMessage>Future date not allowed for udhyam application registration date.</errorMessage>
</ValidationRule>