force-app/main/default/objects/Loan_Applicant__c/validationRules/Validate_Pan_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Pan_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c), NOT(ISBLANK( Pan_Number__c )), NOT( REGEX(Pan_Number__c, &quot;[A-Z]{5}[0-9]{4}[A-Z]{1}&quot;) ))</errorConditionFormula>
    <errorDisplayField>Pan_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid PAN number</errorMessage>
</ValidationRule>