force-app/main/default/objects/Loan_Applicant__c/validationRules/Validate_Pan_Number_Individual.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Pan_Number_Individual</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),
NOT(ISBLANK( Pan_Number__c )),
OR(RecordType.Name = &apos;Individual&apos;,RecordType.Name = &apos;BL Individual&apos;),
NOT( REGEX(Pan_Number__c, &quot;[A-Z]{3}[PHABJ]{1}[A-Z]{1}[0-9]{4}[A-Z]{1}&quot;) ))</errorConditionFormula>
    <errorDisplayField>Pan_Number__c</errorDisplayField>
    <errorMessage>Please enter a valid PAN number for individual.</errorMessage>
</ValidationRule>