force-app/main/default/objects/Loan_Applicant__c/validationRules/Validate_Spouse_Pan_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Spouse_Pan_Number</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				NOT($Setup.Bypass_Validations__c.Bypass_Validation__c),
NOT(ISBLANK( Pan_Number_Spouse__c )),
OR(RecordType.Name = &apos;Individual&apos;,RecordType.Name = &apos;BL Individual&apos;),
NOT( REGEX(Pan_Number_Spouse__c, &quot;[A-Z]{3}[PHABJ]{1}[A-Z]{1}[0-9]{4}[A-Z]{1}&quot;) ))</errorConditionFormula>
    <errorDisplayField>Pan_Number_Spouse__c</errorDisplayField>
    <errorMessage>Please enter a valid Spouse PAN number</errorMessage>
</ValidationRule>