force-app/main/default/objects/Loan_Applicant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Applicant_Type__c</columns>
    <columns>Application__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pan_Number__c</field>
        <operation>equals</operation>
        <value>AAHPO7310C</value>
    </filters>
    <label>All</label>
</ListView>