force-app/main/default/objects/Loan_Applicant__c/listViews/Primary_Applicants.listView-meta.xml
<ListView>
    <fullName>Primary_Applicants</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Pan_Number__c</columns>
    <columns>Loan_Application__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Applicant_Type__c</field>
        <operation>equals</operation>
        <value>Applicant</value>
    </filters>
    <label>Primary Applicants</label>
</ListView>